--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -3,3 +3,6 @@
 }
 
 <h1 class="text-center">Factory Tracker</h1>
+
+<button class="btn btn-dark">@Html.ActionLink("Engineers", "Index", "Engineer")</button>
+<button class="btn btn-dark">@Html.ActionLink("Machines", "Index", "Machine")</button>
