--- a/Factory/Views/Machine/Create.cshtml
+++ b/Factory/Views/Machine/Create.cshtml
@@ -2,4 +2,22 @@
   Layout = "_Layout";
 }
 
+@model Factory.Models.Machine
+
+<button class="btn btn-danger">@Html.ActionLink("Cancel", "Index")</button>
+
 <h2>Add Machine</h2>
+
+@using (Html.BeginForm())
+{
+  @Html.LabelFor(model => model.Name)
+  @Html.TextBoxFor(model => model.Name, new { @class="form-control", required="required"})
+
+  @Html.LabelFor(model => model.Notes)
+  @Html.TextBoxFor(model => model.Notes, new { @class="form-control", required="required"})
+
+  @Html.Label("Date Installed")
+  @Html.EditorFor(model => model.DateInstalled, new { htmlAttributes = new { @class = "form-control", @type="Date"}})
+
+  <input type="submit" value="Create" class="btn btn-success"/>
+}
