--- a/Factory/Views/Engineer/Edit.cshtml
+++ b/Factory/Views/Engineer/Edit.cshtml
@@ -1,11 +1,11 @@
 @{
-  Layout = "_Layout";
+  Layout = "_EngineerLayout";
 }
 
 @model Factory.Models.Engineer
 
 <h2>Edit Engineer</h2>
-<h4>Edit this task: @Model.Name</h4>
+<h4>Edit this Engineer: @Model.Name</h4>
 
 @using (Html.BeginForm())
 {
