--- a/Factory/Views/Engineer/Index.cshtml
+++ b/Factory/Views/Engineer/Index.cshtml
@@ -2,7 +2,7 @@
 @model List<Factory.Models.Engineer>
 
 @{
-  Layout = "_Layout";
+  Layout = "_EngineerLayout";
 }
 <button class="btn btn-dark">@Html.ActionLink("Home", "Index", "Home")</button>
 <button class="btn btn-dark">@Html.ActionLink("Machines", "Index", "Machine")</button>
