--- a/Factory/Views/Machine/Details.cshtml
+++ b/Factory/Views/Machine/Details.cshtml
@@ -6,7 +6,7 @@
 <button class="btn btn-dark">@Html.ActionLink("Back to Machines", "Index")</button>
 <button class="btn btn-danger">@Html.ActionLink("Remove Machine", "Delete", new { id = Model.MachineId})</button>
 <button class="btn btn-dark">@Html.ActionLink("Edit Machine", "Edit", new { id = Model.MachineId })</button>
-<button class="btn btn-dark">@Html.ActionLink("Add Engineer", "AddMachine", new { id = Model.MachineId })</button>
+<button class="btn btn-dark">@Html.ActionLink("Add Engineer", "AddEngineer", new { id = Model.MachineId })</button>
 
 @model Factory.Models.Machine
 
@@ -15,15 +15,15 @@
 
 @if(Model.JoinEntities.Count == 0)
 {
-  <h3>@Model.Name is not managing any factory machines</h3>
+  <h3>@Model.Name is not being maintaned by any factory engineers</h3>
 }
 <ul>
   @foreach (var join in Model.JoinEntities)
   {
-    <li>@join.Machine.Name</li>
-    @using (Html.BeginForm("DeleteMachine", "Engineer"))
+    <li>@join.Engineer.Name</li>
+    @using (Html.BeginForm("DeleteEngineer", "Machine"))
     {
-      @Html.Hidden("joinId", @join.MachineId)
+      @Html.Hidden("joinId", @join.EngineerMachineId)
       <input type="submit" value="Delete" class="btn btn-danger"/>
     }
   }
