--- a/Factory/Views/Shared/_MachineLayout.cshtml
+++ b/Factory/Views/Shared/_MachineLayout.cshtml
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <title>Factory Tracker</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="~/css/machineStyles.css">
   </head>
   <body>
-    <div class="container">
-      @RenderBody()
-      @Html.Partial("_Footer")
-    </div>
+    @RenderBody()
+    @Html.Partial("_Footer")
   </body>
 </html>
