--- a/Factory/Views/Machine/Details.cshtml
+++ b/Factory/Views/Machine/Details.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_MachineLayout";
 }
 
 <button class="btn btn-dark">@Html.ActionLink("Home", "Index", "Home")</button>
