--- a/Factory/Views/Machine/Index.cshtml
+++ b/Factory/Views/Machine/Index.cshtml
@@ -2,7 +2,7 @@
 @model List<Factory.Models.Machine>
 
 @{
-  Layout = "_Layout";
+  Layout = "_MachineLayout";
 }
 <button class="btn btn-dark">@Html.ActionLink("Home", "Index", "Home")</button>
 <button class="btn btn-dark">@Html.ActionLink("Engineers", "Index", "Engineer")</button>
