--- a/Factory/Views/Engineer/Edit.cshtml
+++ b/Factory/Views/Engineer/Edit.cshtml
@@ -3,22 +3,31 @@
 }
 
 @model Factory.Models.Engineer
+<button class="btn btn-danger">@Html.ActionLink("Cancel", "Details", new {id = Model.EngineerId})</button>
 
-<h2>Edit Engineer</h2>
-<h4>Edit this Engineer: @Model.Name</h4>
+<div class="box">
+  <h2>Edit Engineer</h2>
+  <h4>Edit this Engineer: @Model.Name</h4>
+</div>
 
-@using (Html.BeginForm())
-{
-  @Html.HiddenFor(model => model.EngineerId)
+<div class="box">
+  @using (Html.BeginForm())
+  {
+    @Html.HiddenFor(model => model.EngineerId)
 
-  @Html.LabelFor(model => model.Name)
-  @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class="form-control", required="required"}})
+    <div class="subbox">
+      @Html.LabelFor(model => model.Name)
+      @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class="form-control", required="required"}})
+    </div>
+    <div class="subbox">
+      @Html.LabelFor(model => model.Comments)
+      @Html.EditorFor(model => model.Comments, new { htmlAttributes = new { @class="form-control", required="required"}})
+    </div>
+    <div class="subbox">
+      @Html.Label("Date Hired")
+      @Html.TextBoxFor(model => model.DateHired, new { @class = "form-control", @type="Date", @Value=Model.DateHired})
+    </div>
 
-  @Html.LabelFor(model => model.Comments)
-  @Html.EditorFor(model => model.Comments, new { htmlAttributes = new { @class="form-control", required="required"}})
-
-  @Html.Label("Date Hired")
-  @Html.TextBoxFor(model => model.DateHired, new { @class = "form-control", @type="Date", @Value=Model.DateHired})
-
-  <input type="submit" value="Edit" class="btn btn-success"/>
-}
+    <input type="submit" value="Edit" class="btn btn-success"/>
+  }
+</div>
