--- a/Factory/wwwroot/css/engineerStyles.css
+++ b/Factory/wwwroot/css/engineerStyles.css
@@ -21,6 +21,8 @@ footer {
 .containerEngineer {
   background-color: #7d9b00;
   height:100vh;
+  padding-left: 5vw;
+  padding-right: 5vw;
 
 }
 
@@ -29,6 +31,13 @@ footer {
   margin:20px;
   padding:10px;
   border: 5px solid rgb(236, 236, 181);
+  border-radius: 10px;
+}
+
+.subbox {
+  margin-top: 10px;
+  padding:5px;
+  background-color: rgb(236, 236, 181);
   border-radius: 10px;
 }
 
